修改了模型为deepseek r1 新增了历史记忆筛选机制